# SDS-CP042-scholarai

./: README.md  requirements.txt
advanced/submissions/team-members/shaheer-airaj/: research_workflow.py
beginner/: README.md
beginner/submissions/team-members/art-turner/: .gitignore  PRESENTATION_GUIDE.md  README.md  REPORT.md  UNDERSTANDING.md  app.py  main.py  pyproject.toml  requirements.txt  test_gradio.py  test_week1.py  test_week2.py
beginner/submissions/team-members/art-turner/agents/: __init__.py  research_agent.py  synthesizer_agent.py
beginner/submissions/team-members/art-turner/exporters/: __init__.py  json_exporter.py  markdown_exporter.py
beginner/submissions/team-members/art-turner/models/: __init__.py  report.py
beginner/submissions/team-members/art-turner/test_outputs/: Recent_advances_in_AI.json  Recent_advances_in_AI.md  artificial_intelligence_in_healthcare.json  artificial_intelligence_in_healthcare.md
beginner/submissions/team-members/art-turner/tools/: __init__.py  web_search.py
beginner/submissions/team-members/sheila-adams/: README.md  SETUP_GUIDE.md  app.py  requirements.txt  test_setup.py
beginner/submissions/team-members/sheila-adams/src/: __init__.py  config.py
beginner/submissions/team-members/sheila-adams/src/agents/: __init__.py  research.py  synthesizer.py
beginner/submissions/team-members/sheila-adams/src/exporters/: __init__.py  export.py
beginner/submissions/team-members/sheila-adams/src/tools/: __init__.py  search.py
